<resources>
    <string name="app_name">PartFinder</string>
    <string name="welcome_title">Добро пожаловать в \n Part Finder!👋</string>
    <string name="welcome_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="welcome_button_agree">Понятно</string>
    <string name="privacy_policy_title">Политика \n конфиденциальности</string>
    <string name="privacy_policy_statement2">Мы не передаем Ваши данные третьим лицам</string>
    <string name="privacy_policy_statement1">Мы храним и обрабатываем данные, которые Вы указываете в приложении (ФИО, email, контакты, номера телефонов и др.). Это нужно чтобы организовать взаимодействиие пользователей, идентифицировать пользователей и пресекать неправомерные действия</string>
    <string name="privacy_policy_additional">Подробнее с политикой конфиденциальности можно ознакомиться по ссылке:</string>
    <string name="text_button_privacy_policy"><u>Политика конфиденциальности</u></string>
    <string name="exit">Выход</string>
    <string name="accept">Принять</string>
    <string name="sign_in">Войти в аккаунт</string>
    <string name="text_button_forgot_password"><u>Забыли пароль?</u></string>
    <string name="text_button_register"><u>Регистрация</u></string>
    <string name="doesnt_have_account">Нет аккаунта?</string>
    <string name="text_button_back"><u>Назад</u></string>
    <string name="phone_auth_title">Вход по номеру телефона</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="button_sign_in">Войти</string>
    <string name="button_send">Отправить</string>
    <string name="button_repeat_after_1_min">Повторить 1:00</string>
    <string name="registration_stage_1">Способ</string>
    <string name="registration_stage_2">Данные</string>
    <string name="registration_stage_3">Подтверждение</string>
    <string name="registration_stage_4">ФИО</string>
    <string name="user_profile_stage_1">Организация</string>
    <string name="user_profile_stage_2">Деятельность</string>
    <string name="user_profile_stage_3">О себе</string>
    <string name="user_profile_stage_4">Доп. вопросы</string>
    <string name="create_ad_stage_1">Цель</string>
    <string name="create_ad_stage_2">Описание</string>
    <string name="create_ad_stage_3">Файлы и медиа</string>
    <string name="create_ad_stage_4">Контакты</string>
    <string name="unknown_source">Источник не указан</string>
    <string name="unknown_author">Автор не указан</string>
    <string name="no_title">Заголовок отсутствует</string>
    <string name="no_description">Описание отсутствует</string>
    <string name="bottom_app_bar_settings">Настройки</string>
    <string name="bottom_app_bar_chats">Чаты</string>
    <string name="bottom_app_bar_home">Главная</string>
    <string name="bottom_app_bar_favourite">Избранное</string>
    <string name="category_e_commerce">E-commerce</string>
    <string name="category_e_commerce_description">E-commerce</string>
    <string name="category_retail">Ритейл</string>
    <string name="category_retail_description">Ритейл</string>
    <string name="category_real_estate">Недвижимость</string>
    <string name="category_real_estate_description">Недвижимость</string>
    <string name="create_ad_target_info">Кратко опишите цель объявления. Максимум - 150 символов</string>
    <string name="create_ad_target_header">Цель объявления</string>
    <string name="create_ad_target_type_header">Выберете тип объявления:</string>
    <string name="create_ad_target_type_1">Предлагаю инвестиции</string>
    <string name="create_ad_target_type_2">Ищу инвестиции</string>
    <string name="create_ad_target_type_3">Ищу бизнес-партнера</string>
    <string name="create_ad_target_type_4">Ищу подрядчика/поставщика</string>
    <string name="create_ad_target_type_5">Предлагаю услуги бизнесу</string>
    <string name="create_ad_target_input_hint">Цель объявления</string>
    <string name="next_step">Далее</string>
    <string name="app_settings">Приложение</string>
    <string name="account">Аккаунт</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="language">Язык</string>
    <string name="russian_language">Русский</string>
    <string name="user_rating_placeholder">+999</string>
    <string name="home_page_welcome_prefix">Добро пожаловать,</string>
    <string name="home_page_categories_title">Категории</string>
    <string name="home_page_news_title">Новости</string>
    <string name="home_page_recommended_ads_title">Рекомендации</string>
    <string name="tag_placeholder">Тестовый тег</string>
    <string name="enter_sms_code_title">Ввод кода</string>
    <string name="enter_sms_code_info">На указанный номер выслано SMS. Введите 6-значный код из SMS</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="sign_in_using">Войти через</string>
    <string name="email_input_example_hint">Например, example@gmail.com</string>
    <string name="password_reset_title">Сброс пароля</string>
    <string name="password_reset_info">Введите E-mail, использованный при регистрации. На указанный адрес будет выслано письмо для сброса пароля</string>
    <string name="phone_auth_info">На указанный номер будет выслано SMS с кодом подтвержения</string>
    <string name="phone_input_example_hint">Например, +78001234567</string>
    <string name="favourite_ad_card_rating_prefix">Рейтинг:</string>
    <string name="successful_sign_up_message">Вы успешно зарегистрировались!</string>
    <string name="hooray">🎉Ура!🎉</string>
    <string name="button_lets_go">Поехали!</string>
    <string name="button_delete">Удалить</string>
    <string name="button_cancel">Отмена</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="account_deletion_info">Вся информация о Вас и Ваших объявлениях будет удалена без возможности восстановления</string>
    <string name="button_continue">Продолжить</string>
    <string name="registration_password_input_hint">Пароль должен быть длиннее 8 символов и содержать цифры, строчные и прописные буквы, спец. символы</string>
    <string name="registration_repeat_password_hint">Повторите пароль</string>
    <string name="password_input_hint">Пароль</string>
    <string name="registration_email_input_hint">E-mail адрес</string>
    <string name="registration_method_title">Способ регистрации</string>
    <string name="registration_method_info">Выберете способ регистрации, который удобнее для Вас</string>
    <string name="button_registration_by_phone">По телефону</string>
    <string name="registration_method_by_email">По E-mail</string>
    <string name="registration_name_form_info">Введите Ваше имя</string>
    <string name="registration_name_title">Давайте знакомиться!</string>
    <string name="registration_name_form_name_hint">Имя</string>
    <string name="registration_name_form_surname_hint">Фамилия</string>
    <string name="registration_name_form_last_name_hint">Отчество (если есть)</string>
    <string name="home_page_search_hint">Искать по всем категориям</string>
    <string name="email_input_hint">E-mail</string>
    <string name="message_title_code_doesnt_send">Код не отправлен</string>
    <string name="registration_phone_title">Регистрация по номеру телефона</string>
    <string name="registration_confirmation_phone_info">Введите 6-значный код из SMS</string>
    <string name="registration_email_title">Регистрация по E-mail</string>
    <string name="registration_confirmation_email_info">Мы выслали письмо на указанный адрес. Доставка письма может занимать от нескольких секунд до минут. Если письмо не приходит, не забудьте проверить “Спам”</string>
    <string name="message_title_wrong_code">Неверный код</string>
    <string name="registration_data_phone_info">На указанный номер будет выслано SMS с кодом подтвержения</string>
    <string name="registration_data_email_info">На указанный адрес будет выслано письмо для подтверждения</string>
    <string name="message_title_wrong_input">Неверный ввод</string>
    <string name="message_title_error">Ошибка</string>
    <string name="message_text_wrong_phone_number">Пожалуйста, перепроверьте введенные значения. Некорректный номер телефона</string>
    <string name="warning_text_passwords_not_same">Пожалуйста, перепроверьте введенные значения. Пароли не совпадают</string>
    <string name="message_text_registration_wrong_email_or_password">Email должен быть корректным, а пароль соответствовать требованиям</string>
    <string name="message_title_todo">TODO</string>
    <string name="message_text_todo">Реализация функционала запланирована в ближайшем будущем</string>
    <string name="message_title_auth_error">Ошибка авторизации</string>
    <string name="message_title_sign_in_success">Добро пожаловать!</string>
    <string name="message_text_sign_in_success">Вы успешно вошли</string>
    <string name="message_text_auth_incorrect_email_or_password">Проверьте корректность ввода email и пароля</string>
    <string name="message_text_cannot_load_rec_ads">Не удалось загрузить рекомендованные объявления</string>
    <string name="message_text_pasword_reset_incorrect_email">Проверьте корректность ввода email</string>
    <string name="message_title_sending_error">Ошибка при отправке</string>
    <string name="password_reset_sent_letter_info">Мы выслали письмо на указанный адрес. Доставка письма может занимать от нескольких секунд до минут. Если письмо не приходит, не забудьте проверить “Спам”</string>
    <string name="button_go_back">Вернуться</string>
    <string name="message_text_invalid_name">Имя и фамилия не должны быть пустыми или содержать цифры или спец. знаки</string>
    <string name="settings">Настройки</string>
    <string name="button_publish">Опубликовать</string>
    <string name="todo">TODO</string>
    <string name="category_search">Поиск объявлений по категориям</string>
    <string name="create_ad_contacts_info">Выберете контакты, которые отобразятся в объявлении. Если Вы не укажете никакие контакты, то пользователи смогут связаться с Вами только через мессенджер приложения</string>
    <string name="create_ad_contacts_info2">Настроить список контактов можно в профиле</string>
    <string name="create_ad_title">Контакты</string>
    <string name="create_ad_description_info_region">Выберете регион для объявления. Если территориальный фактор не имеет значения, выберете “Любой”</string>
    <string name="create_ad_description_info_tags">Выберете теги для объявления. Это поможет другим пользователям найти Ваше объявление</string>
    <string name="create_ad_description_info">Описание идеи. Можете не ограничивать себя и обстоятельно все описать, но самые мелкие подробности и расчеты лучше вынести в прикрепляемые файлы</string>
    <string name="button_select">Выбрать</string>
    <string name="post_create_ad_title">Объявление опубликовано!</string>
    <string name="post_create_ad_info">Отредактировать объявление или снять с публикации можно из профиля</string>
    <string name="ad_details">Просмотр деталей объявления</string>
    <string name="create_ad_files_info">Чтобы сделать Ваше объявление более наглядным и заметным, добавьте фото- и видеоматериалы, описывающие суть. Видео может быть питчем идеи, описанием прибора, демонстрацией ключевых показателей и т.д. Фотографии могут, например, содержать фото продукции, демонстрацию изделия или графики и диаграммы</string>
</resources>