<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_app_bar_home"
        android:title="@string/bottom_app_bar_home"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_app_bar_chats"
        android:title="@string/bottom_app_bar_chats"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_app_bar_favourite"
        android:title="@string/bottom_app_bar_favourite"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_app_bar_settings"
        android:title="@string/bottom_app_bar_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
</menu>